--- a/subgraphs/exchange-v3/template/subgraph.yaml
+++ b/subgraphs/exchange-v3/template/subgraph.yaml
@@ -8,11 +8,11 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: zksync-era
+    network: frax-mainnet
     source:
-      address: "0x1bb72e0cbbea93c08f535fc7856e0338d7f7a8ab"
+      address: "0xAAA32926fcE6bE95ea2c51cB4Fcb60836D320C42"
       abi: Factory
-      startBlock: 8639214
+      startBlock: 1352718
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
